@@ -1799,6 +1799,14 @@ main (int argc, char **argv)
     out_after = default_context;
   if (out_before < 0)
     out_before = default_context;
+  if (only_matching && (out_after > 0 || out_before > 0))
+    {
+      fprintf(stderr,
+	     _("%s: Any context line specification "
+	       "is ignored with -o/--only-matching.\n"),
+	     program_name);
+      out_after = out_before = 0;
+    }
 
   if (color_option)
     {
